Commented config files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,38 @@
+// TS Configuration for development and IDE integration.
+// Builds should use a production tsconfig file or use gulp to provide custom configuration.
 {
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "jsx": "react",
+    // This is disabled because it would generate a .js.map file for every file in the project.
     "sourceMap": false,
+    // Emit a single file with source maps instead of having a separate file.
     "inlineSourceMap": true,
-    "allowSyntheticDefaultImports": true,
+    // This is a convenience flag that turns on a bunch of noX and strictX flags,
+    // some of which are redundantly set down below in case the convenience flag
+    // becomes inconvenient in the future.
     "strict": true,
+    // Disallow null and undefined as values for non-nullable types.
     "strictNullChecks": true,
+    // Raise error on expressions and declarations with an implied any type.
     "noImplicitAny": true,
+    // Report error when not all code paths in function return a value.
     "noImplicitReturns": true,
+    // Do not emit outputs if any errors were reported.
+    // This was enabled for no good reason. It may or may not speed up development.
     "noEmitOnError": false,
+    // Special comment directives can be used to exclude code from coverage reports.
+    // Removing comments would remove these directives and lower code coverage stats.
     "removeComments": false,
+    // This checks casing for import statements such as
+    // import X from 'X'
     "forceConsistentCasingInFileNames": true,
+    // This was disabled because it conflicted with ES6 features.
     "suppressImplicitAnyIndexErrors": true,
+    // Support JSX in .tsx files.
+    "jsx": "react",
+    // Watch input files and trigger recompilation on changes.
+    // Disabled because IntelliJ and/or Gulp can take care of this.
     "watch": false
   },
   "include": [
